Layout Bugfix, ELDP Stuff

--- a/src/css/layout-eldp.css
+++ b/src/css/layout-eldp.css
@@ -66,28 +66,6 @@ color: #4D87C7;
 	padding: 5px 10px;
 }
 
-#crps_div:hover #crps_filetype_select{
-
-	display: block;
-	position: absolute;
-	bottom: 44px; 
-	background: cornflowerblue;
-	color: black;
-	padding: 15px;
-	cursor: default;
-}
-
-#crps_filetype_select h3{
-
-	padding-bottom: 10px;
-	color: white;
-	height: auto !important;
-	float: none !important;
-	line-height: 1em !important;
-	margin: 0px;
-
-}
-
 .file_entry p{
 	margin: 0px;
 	white-space: nowrap;
@@ -423,30 +401,6 @@ color: #FFFFFF;
 .selected_file {
 	border: 10px solid;
 	border-color: indigo;
-}
-
-#copy_bundles_select{
-
-	display: none;
-	bottom: 44px;
-	position: absolute;
-	background: cornflowerblue;
-	color: black;
-	padding: 15px;
-	cursor: default;
-
-}
-
-#crps_filetype_select{
-
-	display: none;
-
-}
-
-#copy_bundles_div:hover #copy_bundles_select{
-
-	display: block;
-
 }
 
 
