--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -643,3 +643,47 @@ padding-right: 10px;
 	margin-top: 100px;
 
 }
+
+
+
+
+#crps_div:hover #crps_filetype_select{
+
+	display: block;
+	position: absolute;
+	bottom: 44px; 
+	background: cornflowerblue;
+	color: black;
+	padding: 15px;
+	cursor: default;
+}
+
+.function_sub_div h3{
+
+	padding-bottom: 10px;
+	color: white;
+	height: auto !important;
+	float: none !important;
+	line-height: 1em !important;
+	margin: 0px;
+
+}
+
+
+.function_sub_div{
+
+	display: none;
+	bottom: 44px;
+	position: absolute;
+	background: cornflowerblue;
+	color: black;
+	padding: 15px;
+	cursor: default;
+
+}
+
+.function_wrap:hover  .function_sub_div{
+
+	display: block;
+
+}
